fix alignment issues on mobile

--- a/src/assets/scss/mobile.scss
+++ b/src/assets/scss/mobile.scss
@@ -80,7 +80,7 @@ a.navbar-item:hover {
   float: right;
   img {
     width: auto;
-    max-height: 2.4rem;
+    max-height: 4.5vh;
   }
 }
 
@@ -145,7 +145,7 @@ a.navbar-item:hover {
 {
   display: block;
   width: 33px;
-  height: 4px;
+  height: 3px;
   margin-bottom: 5px;
   position: relative;
   background: black;
